fix: rename classes and packages + refactor service code